--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: efsacatalogclient
 Type: Package
-Title: This Package Provides Functions To Download EFSA Catalogs 
+Title: This Package Provides Functions to Download EFSA Catalogs 
 Version: 0.1.0
-Author: Kenneth Mulligan
-Maintainer:  Kenneth Mulligan <kenneth.mulligan@efsa.europa.eu>
+Author: Kenneth Mulligan <kenneth.mulligan@efsa.europa.eu>
+Maintainer: Kenneth Mulligan <kenneth.mulligan@efsa.europa.eu>
 Description: This peckage provides a client to access the entire collection of 
               EFSA control terminology in json format.
-License: GNU-3
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
